--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -1,28 +1,24 @@
-<!DOCTYPE html>
+<!doctype html>
 <html xmlns:th="http://www.thymeleaf.org">
   <head>
     <link th:href="@{/css/navbar.css}" rel="stylesheet" />
   </head>
   <body>
     <div th:fragment="navbar">
-      <nav>
+      <nav class="navbar">
         <div class="logo">
           <svg></svg>
           <p>Resume</p>
         </div>
 
-        <div class="menu">
-          <ul class="menu__list">
-            <li>Home</li>
-            <li>Features</li>
-            <li>Pricing</li>
-            <li>Contact</li>
-          </ul>
-        </div>
+        <ul class="menu__list">
+          <li>Home</li>
+          <li>Features</li>
+          <li>Pricing</li>
+          <li>Contact</li>
+        </ul>
 
-        <div class="btn_start">
-          <button class="call_to_act">Get started</button>
-        </div>
+        <button class="call_to_act">Get started</button>
       </nav>
     </div>
   </body>
