--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -2,11 +2,15 @@
 <html xmlns:th="http://www.thymeleaf.org">
   <head>
     <link th:href="@{/css/navbar.css}" rel="stylesheet" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+    />
   </head>
   <body>
     <nav th:fragment="navbar" class="navbar">
       <div class="navbar-brand">
-        <span class="navbar-logo"></span>
+        <i class="fa-solid fa-file" style="color: #ff784b"></i>
         <span class="navbar-title">Resume</span>
       </div>
 
