--- a/src/main/resources/static/css/navbar.css
+++ b/src/main/resources/static/css/navbar.css
@@ -1,3 +1,7 @@
+body {
+  font-family: "Roboto", sans-serif;
+}
+
 .navbar {
   display: flex;
   justify-content: space-between;
@@ -12,11 +16,12 @@
 }
 
 .navbar-logo {
-  font-size: 24px;
+  font-size: 14px;
+  font-weight: bold;
 }
 
 .navbar-title {
-  font-size: 18px;
+  font-size: 16px;
   padding-left: 8.5px;
   color: black;
 }
@@ -44,7 +49,7 @@
   padding: 10px 20px;
   border-radius: 20px;
   text-decoration: none;
-  font-size: 16px;
+  font-size: 13.5px;
 }
 
 .get-started-button:hover {
