--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-  <head th:fragment="head">
-    <link th:href="@{/css/navbar.css}" rel="stylesheet" />
+  <head>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
@@ -13,6 +12,8 @@
   </head>
   <body>
     <nav th:fragment="navbar" class="navbar">
+      <link th:href="@{/css/navbar.css}" rel="stylesheet" />
+
       <div class="navbar-brand">
         <i class="fa-solid fa-file" style="color: #ff784b"></i>
         <span class="navbar-title">Resume</span>
