feat: finish styling main page first part
- Add .envrc file for direnv environment autoload
- finish styling the main part

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,10 +8,53 @@
     />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;300;400;500;600;700&display=swap"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Palanquin:wght@100;200;300;400;500;600;700&display=swap"
+      rel="stylesheet"
     />
   </head>
   <body>
     <div th:replace="~{navbar :: navbar}"></div>
+
+    <div class="main_part">
+      <h1 class="title_main_part">Create Your Perfect Resume</h1>
+      <p class="description_main_part">
+        Automatically generate resumes using LaTeX templates based on your
+        information.
+      </p>
+      <a href="#" class="start-building-button">Start Building</a>
+    </div>
+
+    <div class="features_part">
+      <h2 class="title_features_part">Features</h2>
+      <div class="feature_section">
+        <i class=""></i>
+        <p class="title_feature_section">Easy to Use</p>
+        <p class="description_feature_section">
+          Our tool is user-friendly, enabling anyone to create a professional
+          resume effortlessly.
+        </p>
+      </div>
+
+      <div class="feature_section">
+        <i class=""></i>
+        <p class="title_feature_section">Easy to Use</p>
+        <p class="description_feature_section">
+          Our tool is user-friendly, enabling anyone to create a professional
+          resume effortlessly.
+        </p>
+      </div>
+
+      <div class="feature_section">
+        <i class=""></i>
+        <p class="title_feature_section">Easy to Use</p>
+        <p class="description_feature_section">
+          Our tool is user-friendly, enabling anyone to create a professional
+          resume effortlessly.
+        </p>
+      </div>
+    </div>
   </body>
 </html>
