--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -29,31 +29,34 @@
 
     <div class="features_part">
       <h2 class="title_features_part">Features</h2>
-      <div class="feature_section">
-        <i class=""></i>
-        <p class="title_feature_section">Easy to Use</p>
-        <p class="description_feature_section">
-          Our tool is user-friendly, enabling anyone to create a professional
-          resume effortlessly.
-        </p>
-      </div>
 
-      <div class="feature_section">
-        <i class=""></i>
-        <p class="title_feature_section">Easy to Use</p>
-        <p class="description_feature_section">
-          Our tool is user-friendly, enabling anyone to create a professional
-          resume effortlessly.
-        </p>
-      </div>
+      <div class="features">
+        <div class="feature_section">
+          <i class=""></i>
+          <p class="title_feature_section">Easy to Use</p>
+          <p class="description_feature_section">
+            Our tool is user-friendly, enabling anyone to create a professional
+            resume effortlessly.
+          </p>
+        </div>
 
-      <div class="feature_section">
-        <i class=""></i>
-        <p class="title_feature_section">Easy to Use</p>
-        <p class="description_feature_section">
-          Our tool is user-friendly, enabling anyone to create a professional
-          resume effortlessly.
-        </p>
+        <div class="feature_section">
+          <i class=""></i>
+          <p class="title_feature_section">Easy to Use</p>
+          <p class="description_feature_section">
+            Our tool is user-friendly, enabling anyone to create a professional
+            resume effortlessly.
+          </p>
+        </div>
+
+        <div class="feature_section">
+          <i class=""></i>
+          <p class="title_feature_section">Easy to Use</p>
+          <p class="description_feature_section">
+            Our tool is user-friendly, enabling anyone to create a professional
+            resume effortlessly.
+          </p>
+        </div>
       </div>
     </div>
   </body>
