style: finish styling the features section

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -32,7 +32,7 @@
 
       <div class="features">
         <div class="feature_section">
-          <i class=""></i>
+          <i class="fa-solid fa-wand-magic-sparkles" style="color: #32bc9b"></i>
           <p class="title_feature_section">Easy to Use</p>
           <p class="description_feature_section">
             Our tool is user-friendly, enabling anyone to create a professional
@@ -41,20 +41,19 @@
         </div>
 
         <div class="feature_section">
-          <i class=""></i>
-          <p class="title_feature_section">Easy to Use</p>
+          <i class="fa-solid fa-file-code" style="color: #32bc9b"></i>
+          <p class="title_feature_section">LaTeX Templates</p>
           <p class="description_feature_section">
-            Our tool is user-friendly, enabling anyone to create a professional
-            resume effortlessly.
+            Choose from a variety of LaTeX templates to make your resume stand
+            out
           </p>
         </div>
 
         <div class="feature_section">
-          <i class=""></i>
-          <p class="title_feature_section">Easy to Use</p>
+          <i class="fa-solid fa-cloud-arrow-up" style="color: #32bc9b"></i>
+          <p class="title_feature_section">Cloud Storage</p>
           <p class="description_feature_section">
-            Our tool is user-friendly, enabling anyone to create a professional
-            resume effortlessly.
+            Save your resumes in the cloud and access them any time, anywhere
           </p>
         </div>
       </div>
